# server/public/swagger_output_v1.json
@@ -136,12 +136,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#components/schemas/item"
+                  "$ref": "#components/schemas/itemDetailed"
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#components/schemas/item"
+                  "$ref": "#components/schemas/itemDetailed"
                 }
               }
             }
@@ -257,12 +257,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#components/schemas/customerDTO"
+                "$ref": "#components/schemas/createCustomerDTO"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#components/schemas/customerDTO"
+                "$ref": "#components/schemas/createCustomerDTO"
               }
             }
           }
@@ -272,7 +272,7 @@
         "tags": [
           "Customers"
         ],
-        "summary": "Updates an customer",
+        "summary": "Updates a customer",
         "description": "",
         "responses": {
           "200": {
@@ -404,7 +404,7 @@
         "tags": [
           "Customers"
         ],
-        "summary": "Gets a specific customer's orders by customer ID",
+        "summary": "Gets the orders for a customer by customer ID",
         "description": "",
         "parameters": [
           {
@@ -422,12 +422,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#components/schemas/orders"
+                  "$ref": "#components/schemas/customerOrders"
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#components/schemas/orders"
+                  "$ref": "#components/schemas/customerOrders"
                 }
               }
             }
@@ -448,7 +448,7 @@
         "tags": [
           "Customers"
         ],
-        "summary": "Gets all customers matching the search query",
+        "summary": "Gets customers matching the query",
         "description": "",
         "parameters": [
           {
@@ -835,6 +835,10 @@
             "name": {
               "type": "string",
               "example": "Kayak"
+            },
+            "imageUrl": {
+              "type": "string",
+              "example": "http://localhost:4000/images/1.jpg"
             }
           },
           "required": [
@@ -857,6 +861,34 @@
             "type": "string",
             "example": "Kayak"
           },
+          "imageUrl": {
+            "type": "string",
+            "example": "http://localhost:4000/images/1.jpg"
+          }
+        },
+        "required": [
+          "id",
+          "name"
+        ],
+        "xml": {
+          "name": "item"
+        }
+      },
+      "itemDetailed": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 1
+          },
+          "name": {
+            "type": "string",
+            "example": "Kayak"
+          },
+          "imageUrl": {
+            "type": "string",
+            "example": "http://localhost:4000/images/1.jpg"
+          },
           "description": {
             "type": "string",
             "example": "Go for a paddle"
@@ -867,7 +899,7 @@
           "name"
         ],
         "xml": {
-          "name": "item"
+          "name": "itemDetailed"
         }
       },
       "itemDTO": {
@@ -963,7 +995,33 @@
           "name": "customers"
         }
       },
-      "customerDTO": {
+      "customerOrders": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "262cb163-5ea4-41fa-87c1-a93fac8025c6"
+            },
+            "status": {
+              "type": "string",
+              "example": "Created"
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "2024-02-08T02:32:51.630Z"
+            }
+          },
+          "required": [
+            "id"
+          ]
+        },
+        "xml": {
+          "name": "customerOrders"
+        }
+      },
+      "createCustomerDTO": {
         "type": "object",
         "properties": {
           "name": {
@@ -976,7 +1034,7 @@
           }
         },
         "xml": {
-          "name": "customerDTO"
+          "name": "createCustomerDTO"
         }
       },
       "updateCustomerDTO": {
@@ -1011,10 +1069,6 @@
               "type": "string",
               "example": "262cb163-5ea4-41fa-87c1-a93fac8025c6"
             },
-            "customerId": {
-              "type": "string",
-              "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
-            },
             "status": {
               "type": "string",
               "example": "Created"
@@ -1022,6 +1076,26 @@
             "createdAt": {
               "type": "string",
               "example": "2024-02-08T02:32:51.630Z"
+            },
+            "customer": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Kelsey Shiratori"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "ks@gmail.com"
+                },
+                "id": {
+                  "type": "string",
+                  "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
+                }
+              },
+              "required": [
+                "id"
+              ]
             }
           },
           "required": [
@@ -1039,10 +1113,6 @@
             "type": "string",
             "example": "262cb163-5ea4-41fa-87c1-a93fac8025c6"
           },
-          "customerId": {
-            "type": "string",
-            "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
-          },
           "status": {
             "type": "string",
             "example": "Created"
@@ -1050,6 +1120,63 @@
           "createdAt": {
             "type": "string",
             "example": "2024-02-08T02:32:51.630Z"
+          },
+          "customer": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "Kelsey Shiratori"
+              },
+              "email": {
+                "type": "string",
+                "example": "ks@gmail.com"
+              },
+              "id": {
+                "type": "string",
+                "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
+              }
+            },
+            "required": [
+              "id"
+            ]
+          },
+          "items": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "orderId": {
+                  "type": "string",
+                  "example": "262cb163-5ea4-41fa-87c1-a93fac8025c6"
+                },
+                "item": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Kayak"
+                    },
+                    "imageUrl": {
+                      "type": "string",
+                      "example": "http://localhost:4000/images/1.jpg"
+                    }
+                  },
+                  "required": [
+                    "id",
+                    "name"
+                  ]
+                },
+                "quantity": {
+                  "type": "number",
+                  "example": 2
+                }
+              }
+            }
           }
         },
         "required": [
@@ -1066,15 +1193,18 @@
             "type": "string",
             "example": "262cb163-5ea4-41fa-87c1-a93fac8025c6"
           },
-          "customerId": {
-            "type": "string",
-            "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
-          },
           "status": {
             "type": "string",
             "example": "Created"
+          },
+          "customerId": {
+            "type": "string",
+            "example": "45b23d49-7297-43da-b853-3c7f42c7da6a"
           }
         },
+        "required": [
+          "id"
+        ],
         "xml": {
           "name": "orderDTO"
         }
@@ -1088,9 +1218,12 @@
           },
           "status": {
             "type": "string",
-            "example": "Shipped"
+            "example": "Created"
           }
         },
+        "required": [
+          "id"
+        ],
         "xml": {
           "name": "updateOrderDTO"
         }
