# server/src/features/v1/customers/customers.router.ts
@@ -30,6 +30,14 @@ customersRouter.get(
   validateAccessToken,
   checkRequiredPermission(CustomersPermissions.Read),
   async (req, res) => {
+    /*
+      #swagger.summary = "Gets all customers"
+      #swagger.responses[200] = {
+        description: "The list of customers",
+        schema: {$ref: "#components/schemas/customers"}
+      }
+    */
+
     const customers = await getCustomers();
     if (req.headers["accept"] == "application/xml") {
       const root = create().ele("customers");
@@ -50,6 +58,13 @@ customersRouter.get(
   checkRequiredPermission(CustomersPermissions.Read_Single),
   validate(idUUIDRequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Gets a specific customer by ID"
+      #swagger.responses[200] = {
+        description: "The customer",
+        schema: {$ref: "#components/schemas/customer"}
+      }
+    */
     const data = idUUIDRequestSchema.parse(req);
     const customer = await getCustomerDetail(data.params.id);
     if (customer != null) {
@@ -70,6 +85,14 @@ customersRouter.get(
   checkRequiredPermission(CustomersPermissions.Read_Customer_Orders),
   validate(idUUIDRequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Gets the orders for a customer by customer ID"
+      #swagger.responses[200] = {
+        description: "The orders",
+        schema: {$ref: "#components/schemas/customerOrders"}
+      }
+    */
+
     const data = idUUIDRequestSchema.parse(req);
     const orders = await getOrdersForCustomer(data.params.id);
     if (req.headers["accept"] == "application/xml") {
@@ -91,6 +114,13 @@ customersRouter.get(
   checkRequiredPermission(CustomersPermissions.Read),
   validate(queryRequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Gets customers matching the query"
+      #swagger.responses[200] = {
+        description: "The list of customers",
+        schema: {$ref: "#components/schemas/customers"}
+      }
+    */
     const data = queryRequestSchema.parse(req);
     const customers = await searchCustomers(data.params.query);
     if (req.headers["accept"] == "application/xml") {
@@ -112,6 +142,14 @@ customersRouter.post(
   checkRequiredPermission(CustomersPermissions.Create),
   validate(customerDTORequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Creates a new customer"
+      #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#components/schemas/createCustomerDTO"}
+      } 
+    */
+
     const data = customerDTORequestSchema.parse(req);
     const customer = await upsertCustomer(data.body);
     if (customer != null) {
@@ -128,6 +166,14 @@ customersRouter.delete(
   checkRequiredPermission(SecurityPermissions.Deny),
   validate(idUUIDRequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Deletes a specific customer by ID"
+      #swagger.responses[200] = {
+        description: "The customer that was deleted",
+        schema: {$ref: "#components/schemas/customer"}
+      }
+    */
+
     const data = idUUIDRequestSchema.parse(req);
     const customer = await deleteCustomer(data.params.id);
     if (customer != null) {
@@ -144,6 +190,14 @@ customersRouter.put(
   checkRequiredPermission(CustomersPermissions.Write),
   validate(customerDTORequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Updates a customer"
+      #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#components/schemas/updateCustomerDTO"}
+      } 
+    */
+
     const data = customerDTORequestSchema.parse(req);
     const customer = await upsertCustomer(data.body);
     if (customer != null) {
