# server/src/features/v2/items/items.routerV2.ts
@@ -20,6 +20,13 @@ import {
 export const itemsRouterV2 = express.Router();
 
 itemsRouterV2.get("/", async (req, res) => {
+  /*
+    #swagger.summary = "Gets all items"
+    #swagger.responses[200] = {
+      description: "The list of items",
+      schema: {$ref: "#components/schemas/items"}
+    }
+  */
   const items = await getItems();
   items.forEach((item) => {
     item.thumbnailImageUrl = buildImageUrl(req, item.id, true);
@@ -38,6 +45,13 @@ itemsRouterV2.get("/", async (req, res) => {
 });
 
 itemsRouterV2.get("/:id", validate(idNumberRequestSchema), async (req, res) => {
+  /*
+    #swagger.summary = "Gets a specific item by ID"
+    #swagger.responses[200] = {
+      description: "The item",
+      schema: {$ref: "#components/schemas/itemDetailed"}
+    }
+  */
   const data = idNumberRequestSchema.parse(req);
   const item = await getItemDetail(data.params.id);
   if (item != null) {
@@ -60,6 +74,15 @@ itemsRouterV2.post(
   checkRequiredPermission(ItemsPermissions.Write),
   validate(itemDTORequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Creates a new item"
+      #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#components/schemas/itemDTO"}
+      } 
+      #swagger.security = [{bearerAuth:[]}] 
+    */
+
     const data = itemDTORequestSchema.parse(req);
     const item = await upsertItem(data.body);
     if (item != null) {
@@ -76,6 +99,15 @@ itemsRouterV2.delete(
   checkRequiredPermission(SecurityPermissions.Deny),
   validate(idNumberRequestSchema),
   async (req, res) => {
+    /*
+      #swagger.summary = "Deletes a specific item by ID"
+      #swagger.responses[200] = {
+        description: "The item that was deleted",
+        schema: {$ref: "#components/schemas/item"}
+      }
+      #swagger.security = [{bearerAuth:[]}]
+    */
+
     const data = idNumberRequestSchema.parse(req);
     const item = await deleteItem(data.params.id);
     if (item != null) {
@@ -92,6 +124,15 @@ itemsRouterV2.put(
   checkRequiredPermission(ItemsPermissions.Write),
   validate(itemDTORequestSchema),
   async (req, res) => {
+    /*
+    #swagger.summary = "Updates an item"
+    #swagger.requestBody = {
+      required: true,
+      schema: { $ref: "#components/schemas/updateItemDTO"}
+    } 
+    #swagger.security = [{bearerAuth:[]}]
+    */
+
     const data = itemDTORequestSchema.parse(req);
     const item = await upsertItem(data.body);
     if (item != null) {
